--- a/src/components/sections/home/SegmentsSection.module.css
+++ b/src/components/sections/home/SegmentsSection.module.css
@@ -39,7 +39,7 @@
   font-size: 12px;
   font-weight: 700;
   line-height: 1.3;
-  white-space: nowrap;
+  white-space: wrap;
 }
 
 .badgeIcon {
@@ -354,7 +354,7 @@
 
 }
 
-@media (max-width: 400px){
+@media (max-width: 800px){
   .badge {
     display: flex;
     flex-direction: column;
@@ -362,7 +362,6 @@
     justify-content: center;
     text-align: center;
     width: fit-content;
-    align-self: flex-start;
     gap: 4px;
     padding: 7px 14px;
     font-size: 12px;
